# app

./: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  version.txt
.github/workflows/: release.yml
static/css/: index.css  people.css  result.css  thanks.css
templates/: base.html  index.html  people.html  result.html  thanks.html
