[tool.poetry]
name = "lib-version-remla25-team12"
version = "0.0.0"  # placeholder, overridden by git tag
description = "Library to expose version metadata"
authors = ["Ayush"]
packages = [{ include = "lib_version" }]

[build-system]
requires = ["poetry-core>=1.8.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
